$NetBSD: CHANGES,v 1.36 2019/01/17 07:46:16 mrg Exp $

changes in bozohttpd 20190116:
	o  fix CGI '+' parameter handling, some error checking, and a double
	   free.  from rajeev_v_pillai@yahoo.com
	o  more directory indexing clean up.  from rajeev_v_pillai@yahoo.com

changes in bozohttpd 20181215:
	o  fix .htpasswd bypass for authenticated users.  reported by JP,
	   from leot@netbsd.org
	o  avoid possible null dereference when receiving a big request that
	   timeout.  reported by maya@netbsd.org, from leot@netbsd.org
	o  fix handling of -T option, from leot@netbsd.org
	o  cleanups and portability improvements, from maya@netbsd.org
	o  change directory indexing to use html tables, from
	   rajeev_v_pillai@yahoo.com

changes in bozohttpd 20181125:
	o  fixes for option parsing introduced in bozohttpd 20181123

changes in bozohttpd 20181121:
	o  add url remap support via .bzremap file, from martin@netbsd.org
	o  handle redirections for any protocol, not just http:
	o  fix a denial of service attack against header contents, which
	   is now bounded at 16KiB.  reported by JP
	o  reduce default timeouts, and add expand timeouts to handle the
	   initial line, each header, and the total time spent
	o  add -T option to expose new timeout settings
	o  minor RFC fixes related to timeout handling
	o  fix special file (.htpasswd, .bz*) bypass.  reported by JP

changes in bozohttpd 20170201:
	o  fix an infinite loop in cgi processing
	o  fixes and clean up for the testsuite
	o  no longer sends encoding header for compressed formats

changes in bozohttpd 20160517:
	o  add a bozo_get_version() function which returns the version number

changes in bozohttpd 20160415:
	o  add search-word support for CGI
	o  fix a security issue in CGI suffix handler support which would
	   allow remote code execution, from shm@netbsd.org
	o  -C option supports now CGI scripts only

changes in bozohttpd 20151028:
	o  add CGI support for ~user translation (-E switch)